src/index.css
*{

    box-sizing:border-box;

}



html,
body,
#root{

    width:100%;

    min-height:100%;

    overflow-x:hidden;

    overflow-y:auto;

}



body{

    margin:0;

    background:

    radial-gradient(

        circle,

        #222,

        #050505

    );


    color:white;


    font-family:

    "Courier New",
    monospace;


    touch-action:manipulation;

}



main{

    width:100%;

    min-height:100vh;

    padding:20px;

    text-align:center;

}



h1{

    font-size:50px;

    margin:10px;


    text-shadow:

    0 0 10px #00ff88;

}




.layout{

    display:flex;

    justify-content:center;

    align-items:flex-start;

    gap:30px;

    flex-wrap:wrap;

}





/*
    GAME
*/


.game-container{

    padding:20px;


    background:#111;


    border:

    1px solid #444;


    border-radius:10px;


}



.game-wrapper{

    width:400px;

    max-width:95vw;

    flex-shrink:0;

}



.game-canvas{

    width:100%;

    height:auto;

    aspect-ratio:1 / 1;


    display:block;


    border:

    3px solid white;


    touch-action:none;

}






/*
    SIDE PANEL
*/


.side-panel{

    width:250px;

    max-width:95vw;

    display:flex;

    flex-direction:column;

    gap:20px;

}




.card{

    background:#111;


    border:

    1px solid #444;


    padding:20px;


    border-radius:8px;


}





.status{

    color:#00ff88;

}






/*
    BUTTONS
*/


.start{


    margin-top:15px;


    padding:

    12px 25px;


    background:#111;


    color:white;


    border:

    1px solid white;


    cursor:pointer;


    font-family:inherit;


    font-size:18px;


}



.start:hover{


    background:white;


    color:black;


}






/*
    LEADERBOARD
*/


.leaderboard{


    margin-top:40px;


    padding-bottom:60px;


}







/*
    CORRUPTION EFFECTS
*/


.destroying{

    pointer-events:none;


    animation:

    destroy

    .7s

    forwards;

}



@keyframes destroy{


    0%{

        opacity:1;

        transform:
        translateX(0)
        rotate(0deg);

    }



    25%{

        transform:

        translateX(-15px)

        rotate(-5deg);


        filter:

        contrast(2);

    }



    50%{

        opacity:.5;


        transform:

        translateX(15px)

        rotate(5deg);


        filter:

        blur(5px);

    }



    100%{


        opacity:0;


        transform:

        scale(.7)

        rotate(20deg);


        filter:

        blur(20px);

    }


}




.corrupt-page{

    animation:

    shake

    .3s

    infinite;

}





.glitch{

    animation:

    glitch

    .2s

    infinite;

}






@keyframes glitch{


    0%{

        transform:translate(0);

    }



    25%{

        transform:

        translate(-3px,2px);

    }



    50%{

        transform:

        translate(3px,-2px);

    }



    100%{

        transform:translate(0);

    }

}





@keyframes shake{


    0%{

        transform:translate(0);

    }



    50%{

        transform:translate(2px);

    }



    100%{

        transform:translate(0);

    }

}







footer{


    margin-top:30px;


    opacity:.6;


    text-align:center;

}






/*
    MOBILE
*/


@media(max-width:700px){


    main{

        padding:10px;

    }



    h1{

        font-size:36px;

    }



    .layout{


        flex-direction:column;


        align-items:center;


    }



    .game-wrapper{


        width:95vw;


    }



    .side-panel{


        width:95vw;


    }



    .card{


        width:100%;


        font-size:16px;

    }



    .start{


        width:100%;


        min-height:55px;


        font-size:20px;

    }

}
.score-submit{

    display:flex;

    flex-direction:column;

    align-items:center;

    gap:15px;

    margin-top:20px;

}



.score-submit input{

    width:250px;

    max-width:90vw;

    padding:12px 15px;


    background:#111;


    color:white;


    border:

    1px solid white;


    border-radius:5px;


    font-family:

    "Courier New",
    monospace;


    font-size:18px;


    outline:none;

}



.score-submit input:focus{

    border-color:#00ff88;

    box-shadow:

    0 0 10px #00ff88;

}



.score-submit input::placeholder{

    color:#888;

}
.leaderboard-panel{

    width:250px;

    max-width:95vw;

    flex-shrink:0;

}



.leaderboard-panel .leaderboard{

    margin-top:0;

}



@media(max-width:700px){


    .layout{

        flex-direction:column;

        align-items:center;

    }



    .leaderboard-panel{

        width:95vw;

        order:3;

    }



    .game-container{

        order:1;

    }



    .side-panel{

        order:2;

    }


}

